--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "cristian",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.2",
     "sequelize": "^6.33.0"
   },
