--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "^3.6.2",
+    "rand-token": "^1.0.1",
     "sequelize": "^6.33.0"
   },
   "devDependencies": {
