--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    root /var/www/html
+    root /var/www/html;
 
     location / {
         proxy_pass http://proynode:3000;
