--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,6 +4,8 @@ server {
 
     root /var/www/html;
 
+    server_name apinode.curso-docker.store;
+
     location / {
         proxy_pass http://proynode:3000;
     }
