acme nginx certbot

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,6 +9,11 @@ server {
     location / {
         proxy_pass http://proynode:3000;
     }
+
+    location ~ /.well-known/acme-challenge {
+        allow all;
+        root /var/www/html;
+    }
     
 }
 
