443 ssl config nginx

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,6 +14,32 @@ server {
         allow all;
         root /var/www/html;
     }
-    
 }
 
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+
+    root /var/www/html;
+
+    server_name apinode.curso-docker.store;
+
+    ssl_certificate /etc/letsencrypt/live/apinode.curso-docker.store/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/apinode.curso-docker.store/privkey.pem;
+
+    ssl_session_cache shared:SSL:1m;
+    ssl_session_timeout 5m;
+	 
+     # Specify the Transport Layer Security (TLS) protocols and custom cipher suites that you want to use. The following sample code is only for reference.
+     # A later TLS version offers higher security but lower compatibility with browsers. 
+     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
+     ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
+
+     # A server-side cipher suite is preferentially used. The default value is on.
+     ssl_prefer_server_ciphers on;
+ 
+
+    location / {
+        proxy_pass http://proynode:3000;
+    }
+}
